# subsimgpt2

./: Cargo.toml  README.md
.github/workflows/: github_releases.yaml  linux.yaml  macos.yaml  release.yaml  windows.yaml
assets/models/: pool.glb
src/: control.rs  frustum_gizmo.rs  main.rs  skybox.rs  utils.rs
src/hal/: cameras.rs  image_export.rs  incoming.rs  mod.rs  net.rs  sensors.rs  target.rs
src/sim/: mod.rs  physics.rs
src/sim/scene/: mod.rs  pool.rs  sub.rs
src/sim/sub/: mod.rs  thruster.rs
